# bnlp

./: setup.py
.github/workflows/: bnlp-publish-auto.yml  build_and_test.yml
bnlp/: __init__.py  _rust.py
bnlp/cleantext/: clean.py
bnlp/core/: batch.py  pipeline.py
bnlp/corpus/: corpus.py
bnlp/embedding/: doc2vec.py  fasttext.py  glove.py
bnlp/langdetect/: detector.py
bnlp/spellcheck/: spellchecker.py
bnlp/token_classification/: ner.py  token_classification_trainer.py
bnlp/tokenizer/: basic.py
bnlp/utils/: registry.py  utils.py
bnlp_rust/: Cargo.toml
bnlp_rust/src/: lib.rs
